# openGauss-connector-rust

./: Cargo.toml  README.en.md  README.md  docker-compose.yml
codegen/src/: type_gen.rs
opengauss/: Cargo.toml
opengauss-derive/: Cargo.toml
opengauss-derive-test/: Cargo.toml
opengauss-derive-test/src/: composites.rs  domains.rs  enums.rs  lib.rs
opengauss-derive/src/: accepts.rs  fromsql.rs  lib.rs  tosql.rs
opengauss-native-tls/: Cargo.toml
opengauss-native-tls/src/: lib.rs  test.rs
opengauss-openssl/: Cargo.toml
opengauss-openssl/src/: lib.rs  test.rs
opengauss-protocol/: Cargo.toml
opengauss-protocol/src/: lib.rs
opengauss-protocol/src/message/: backend.rs
opengauss-types/: Cargo.toml
opengauss-types/src/: chrono_04.rs  eui48_04.rs  eui48_1.rs  geo_types_07.rs  lib.rs  pg_lsn.rs  special.rs  time_02.rs
opengauss/src/: binary_copy.rs  client.rs  config.rs  connection.rs  copy_in_writer.rs  copy_out_reader.rs  lib.rs  row_iter.rs  test.rs  transaction.rs
postgres-protocol/: Cargo.toml
postgres-protocol/src/authentication/: mod.rs  sha256.rs
postgres-protocol/src/message/: frontend.rs
postgres/src/: test.rs
tokio-opengauss/: Cargo.toml
tokio-opengauss/benches/: bench.rs
tokio-opengauss/src/: binary_copy.rs  bind.rs  cancel_query_raw.rs  client.rs  config.rs  connect_raw.rs  connect_tls.rs  connection.rs  copy_in.rs  copy_out.rs  lib.rs  portal.rs  prepare.rs  query.rs  row.rs  simple_query.rs  statement.rs  transaction.rs
tokio-opengauss/src/error/: mod.rs
tokio-opengauss/tests/test/: binary_copy.rs  main.rs  parse.rs  runtime.rs
tokio-opengauss/tests/test/types/: chrono_04.rs  mod.rs
tokio-postgres/src/: connect_raw.rs
