[package]
name = "opengauss-derive"
version = "0.1.0"
authors = ["He Guofeng <hgf199@126.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "An internal crate used by opengauss-types"
repository = "https://gitee.com/opengauss/openGauss-connector-rust"

[lib]
proc-macro = true
test = false

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
