[package]
name = "opengauss-openssl"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "TLS support for tokio-opengauss via openssl"
repository = "https://gitee.com/opengauss/openGauss-connector-rust"
readme = "../README.md"

[badges]
circle-ci = { repository = "opengauss/openGauss-connector-rust" }

[features]
default = ["runtime"]
runtime = ["tokio-opengauss/runtime"]

[dependencies]
futures = "0.3"
openssl = "0.10"
tokio = "1.0"
tokio-openssl = "0.6"
tokio-postgres = { version = "0.1.0", path = "../tokio-opengauss", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
postgres = { version = "0.1.0", path = "../opengauss" }
