[package]
name = "opengauss-protocol"
version = "0.1.0"
authors = ["He Guofeng <hgf199@126.com>"]
edition = "2018"
description = "Low level openGauss protocol APIs"
license = "MIT/Apache-2.0"
repository = "https://gitee.com/opengauss/openGauss-connector-rust"
readme = "../README.md"

[dependencies]
base64 = "0.13"
byteorder = "1.0"
bytes = "1.0"
fallible-iterator = "0.2"
hmac = "0.11"
md-5 = "0.9"
memchr = "2.0"
rand = "0.8"
sha2 = "0.9"
stringprep = "0.1"
rust-crypto = "0.2.36"
lazy_static = "1.4.0"
ring = "0.16.9"