[package]
name = "opengauss"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A native, synchronous openGauss client"
repository = "https://gitee.com/opengauss/openGauss-connector-rust"
readme = "../README.md"
keywords = ["database", "og", "openGauss", "sql"]
categories = ["database"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "opengauss/openGauss-connector-rust" }

[features]
array-impls = ["tokio-opengauss/array-impls"]
with-bit-vec-0_6 = ["tokio-opengauss/with-bit-vec-0_6"]
with-chrono-0_4 = ["tokio-opengauss/with-chrono-0_4"]
with-eui48-0_4 = ["tokio-opengauss/with-eui48-0_4"]
with-eui48-1 = ["tokio-opengauss/with-eui48-1"]
with-geo-types-0_6 = ["tokio-opengauss/with-geo-types-0_6"]
with-geo-types-0_7 = ["tokio-opengauss/with-geo-types-0_7"]
with-serde_json-1 = ["tokio-opengauss/with-serde_json-1"]
with-uuid-0_8 = ["tokio-opengauss/with-uuid-0_8"]
with-time-0_2 = ["tokio-opengauss/with-time-0_2"]

[dependencies]
bytes = "1.0"
fallible-iterator = "0.2"
futures = "0.3"
tokio-postgres = { version = "0.1.0", path = "../tokio-opengauss" }

tokio = { version = "1.0", features = ["rt", "time"] }
log = "0.4"

[dev-dependencies]
criterion = "0.3"
