[package]
name = "tokio-opengauss"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A native, asynchronous openGauss client"
repository = "https://gitee.com/opengauss/openGauss-connector-rust"
readme = "../README.md"
keywords = ["database", "og", "openGauss", "sql", "async"]
categories = ["database"]

[lib]
test = false

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "opengauss/openGauss-connector-rust" }

[features]
default = ["runtime"]
runtime = ["tokio/net", "tokio/time"]

array-impls = ["opengauss-types/array-impls"]
with-bit-vec-0_6 = ["opengauss-types/with-bit-vec-0_6"]
with-chrono-0_4 = ["opengauss-types/with-chrono-0_4"]
with-eui48-0_4 = ["opengauss-types/with-eui48-0_4"]
with-eui48-1 = ["opengauss-types/with-eui48-1"]
with-geo-types-0_6 = ["opengauss-types/with-geo-types-0_6"]
with-geo-types-0_7 = ["opengauss-types/with-geo-types-0_7"]
with-serde_json-1 = ["opengauss-types/with-serde_json-1"]
with-uuid-0_8 = ["opengauss-types/with-uuid-0_8"]
with-time-0_2 = ["opengauss-types/with-time-0_2"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
byteorder = "1.0"
fallible-iterator = "0.2"
futures = "0.3"
log = "0.4"
parking_lot = "0.11"
percent-encoding = "2.0"
pin-project-lite = "0.2"
phf = "0.10"
opengauss-protocol = { version = "0.1.0", path = "../opengauss-protocol" }
opengauss-types = { version = "0.1.0", path = "../opengauss-types" }
socket2 = "0.4"
tokio = { version = "1.0", features = ["io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.9"
criterion = "0.3"

bit-vec-06 = { version = "0.6", package = "bit-vec" }
chrono-04 = { version = "0.4", package = "chrono", default-features = false }
eui48-04 = { version = "0.4", package = "eui48" }
eui48-1 = { version = "1.0", package = "eui48" }
geo-types-06 = { version = "0.6", package = "geo-types" }
geo-types-07 = { version = "0.7", package = "geo-types" }
serde-1 = { version = "1.0", package = "serde" }
serde_json-1 = { version = "1.0", package = "serde_json" }
uuid-08 = { version = "0.8", package = "uuid" }
time-02 = { version = "0.2", package = "time" }

